<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/car_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CarDetailsFragment">

    <ImageView
        android:id="@+id/carDetails_CarImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_10"
        android:contentDescription="@string/carPicture"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/carDetails_guideline40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greatcar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/carDetails_guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.40"
        app:layout_constraintStart_toEndOf="parent" />

    <TextView
        android:id="@+id/carDetails_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/car_details"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carDetails_guideline40" />

    <CheckBox
        android:id="@+id/carDetails_CheckBoxLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/carDetails_Label"
        android:text="@string/checkBox"
        />

    <ScrollView
        android:id="@+id/carDetails_ScrollView" android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintBottom_toTopOf="@+id/carDetails_ReturnBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/carDetails_Label"
        app:layout_constraintTop_toBottomOf="@+id/carDetails_Label"
        android:layout_marginLeft="@dimen/margin_10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/carDetails_ManufactureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/manufacturer"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/carDetails_ModelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/model"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carDetails_ManufactureLabel" />

            <TextView
                android:id="@+id/carDetails_TypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carDetails_ModelLabel" />

            <TextView
                android:id="@+id/carDetails_ColorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carDetails_TypeLabel" />

            <TextView
                android:id="@+id/carDetails_PriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carDetails_ColorLabel" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/carDetails_guidelineValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_percent="0.50"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/carDetails_Manufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/carDetails_ManufactureLabel"
                app:layout_constraintStart_toEndOf="@id/carDetails_guidelineValue" />

            <TextView
                android:id="@+id/carDetails_Model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/carDetails_ModelLabel"
                app:layout_constraintStart_toEndOf="@id/carDetails_guidelineValue" />

            <TextView
                android:id="@+id/carDetails_Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/carDetails_TypeLabel"
                app:layout_constraintStart_toEndOf="@id/carDetails_guidelineValue" />

            <TextView
                android:id="@+id/carDetails_Color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/carDetails_ColorLabel"
                app:layout_constraintStart_toEndOf="@id/carDetails_guidelineValue" />

            <TextView

                android:id="@+id/carDetails_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/carDetails_PriceLabel"
                app:layout_constraintStart_toEndOf="@id/carDetails_guidelineValue" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/carDetails_ReturnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toTopOf="@+id/carDetails_Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/carDetails_Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/phoneNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

